@@ -1,6 +1,7 @@
 Change log 1.4 (under development)
 ----------------------------------
 * Added support for JUnit 4.8.1 (issue 226)
+* Fixed so that a "mock name" is set in the Mockito extension API. Fixes NullPointerException when e.g. toString is invoked on a mock. (issue 239)
 
 Change log 1.3.6 (2010-03-10)
 -----------------------------
